adding basic page structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <title>DU BootCamp Team Study Guide</title>
 </head>
+<header>
+    <section class="headertext">
+        <h1>Team Study Guide DU-VIRT-FSF-PT-10-2022</h1>
+    </section>
+</header>
+<nav>
+    <a href="#">HomePage</a>
+    <a href="./HTML.html">HTML</a>
+    <a href="#">CSS</a>
+    <a href="#">Advanced CSS</a>
+</nav>
 <body>
-<h1>Basic Page</h1>    
+<h1>Team Study Guide</h1>    
+    <p>This is the most awful start to a page ever!  Help make this thing look good! I really just got it going and there is a ton of stuff not built.  Feel free to mess with stuff however you want! </p>
+ as a place where we can all collaborate as we study and learn in the Oct 2022 DU BootCamp.  
+ Everyone in the class that would like to be a part of this project can be added as a 
+ collaborater by request via our study group discord located at
+ <a href="https://discord.gg/qK8hU7UP">https://discord.gg/qK8hU7UP</a> and @ me 
+ Nick-NB to give you collaborator rights to the gitHUB to this site located 
+ at <a href="https://github.com/NBADRAUN/Team-Study-Guide-DU-VIRT-FSF-PT-10-2022-">https://github.com/NBADRAUN/Team-Study-Guide-DU-VIRT-FSF-PT-10-2022-</a>.</p>
+ <p>Usage<br>
+    <li> Feel free to add/remove or change anything on the website to make this a learning and growing expereince.</li>
+    <li> Feel free to change any of the structure of this site.  Anything is fair game!"</li>
+    <li> Most Importantly! As we learn a new feature or function, please help by adding these to each of the respective pages.  That way we can keep the feature/function and a short discription of what it does so we can refer back to it later.</li>
+    <br>Happy Coding and Prost!  
+</p>
 </body>
 </html>
