added content cards

--- a/HTML.html
+++ b/HTML.html
@@ -24,5 +24,16 @@
  <ul>item #1</ul>
  <ul>Item #2</ul>
 </p>
+<!--This section has the content boxes-->
+<section class="container">
+    <section class="box">
+        <a href="./HTML.html">HTML</a>
+    </section>
+    <section class="box">
+        <a href="#">CSS</a>
+    </section>
+    <section class="box">
+        <a href="#">Advanced CSS</a>
+    </section>
 </body>
 </html>
