--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <title>DU BootCamp Team Study Guide</title>
 </head>
+<!--This section controls the banner container and text-->
 <header>
     <section class="headertext">
         <h1>Team Study Guide DU-VIRT-FSF-PT-10-2022</h1>
     </section>
 </header>
+<!--This section has the navigation and links-->
 <nav>
     <a href="#">HomePage</a>
     <a href="./HTML.html">HTML</a>
     <a href="#">CSS</a>
     <a href="#">Advanced CSS</a>
 </nav>
+<!--This section has the writen body area -->
 <body>
 <h1>Team Study Guide</h1>    
     <p>This is the most awful start to a page ever!  Help make this thing look good! I really just got it going and there is a ton of stuff not built.  Feel free to mess with stuff however you want! </p>
@@ -33,5 +36,17 @@
     <li> Most Importantly! As we learn a new feature or function, please help by adding these to each of the respective pages.  That way we can keep the feature/function and a short discription of what it does so we can refer back to it later.</li>
     <br>Happy Coding and Prost!!!!!
 </p>
+<!--This section has the content cards-->
+<section class="container">
+    <section class="box">
+        <a href="./HTML.html">HTML</a>
+    </section>
+    <section class="box">
+        <a href="#">CSS</a>
+    </section>
+    <section class="box">
+        <a href="#">Advanced CSS</a>
+    </section>
+</section>
 </body>
 </html>
