media reactive elements

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li> Most Importantly! As we learn a new feature or function, please help by adding these to each of the respective pages.  That way we can keep the feature/function and a short discription of what it does so we can refer back to it later.</li>
     <br>Happy Coding and Prost!!!!!
 </p>
-<!--This section has the content cards-->
+<!--This section has the content boxes-->
 <section class="container">
     <section class="box">
         <a href="./HTML.html">HTML</a>
